--- a/ClubSoft/Views/Shared/_Layout.cshtml
+++ b/ClubSoft/Views/Shared/_Layout.cshtml
@@ -136,7 +136,7 @@
 
                     <a class="list-group-item list-group-item-action text-light" asp-area=""
                         asp-controller="CuentaCorrientes" asp-action="Index"><i
-                            class="fa-solid fa-pen-to-square pe-2"></i>Cuentas Corrientes</a>
+                            class="fa-solid fa-pen-to-square pe-2"></i>Cta. Cte.</a>
                     
                     
                     <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Provincias"
