--- a/ClubSoft/wwwroot/css/CuentaCorrientes.css
+++ b/ClubSoft/wwwroot/css/CuentaCorrientes.css
@@ -1,73 +1,43 @@
-.btn-primary, .btn-danger {
-    opacity: 0;
-    transition: opacity 0.1s ease-in;
-  }
-  
-  tr:hover .btn-primary, tr:hover .btn-danger {
-    opacity: 1;
-  }
-
-.boton-color {
-    background-color: rgb(12, 12, 86);
-    color: #ffffff;
-    border-color: rgb(12, 12, 86);
+.page-item .page-link {
+  color: white; /* Color de texto general */
+  background-color: rgb(12, 12, 86); /* Color de fondo general */
+  border-color: rgb(12, 12, 86); /* Color de borde general */
 }
 
-.boton-color2 {
-    background-color: rgba(81, 65, 65, 0.549);
+.page-item:first-child .page-link {
+  background-color: rgb(12, 12, 86);
+  color: white;
+  border-color: rgb(12, 12, 86);
+  color: white;
 }
 
-.boton-color:hover {
-    background-color: #0d6efd;
-    color: white;
-  }
-
-.container-modal {
-    width: 100%;
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    background-color: rgb(194, 185, 185);
-
-}
-
-
-.modal-header {
-    background-color: rgb(12, 12, 86);
-}
-
-.text-color {
+.page-item:last-child .page-link {
+background-color: rgb(12, 12, 86);
+color: white;
+border-color: rgb(12, 12, 86);
 color: white;
 }
 
-/* INPUT BUSCAR */
-.search {
-  display: flex;
-  align-items: center;
-  border-radius: 5px;
-  margin-left: 10px;
-  border: solid 1px #5b5b5b32;
+.page-item.active .page-link {
+background-color: rgb(194, 185, 185);
+border-color:rgb(194, 185, 185);
+}
+.page-item.disabled .page-link {
+background-color:  rgb(12, 12, 86);
+color: white
 }
 
-.search i {
-  font-size: 18px;
-  color: #ccc;
-  margin-right: 10px;
+.table-responsive {
+  height: 380px; 
+    overflow-y: auto;
 }
-
-.search input {
-  flex: 1;
-  width: 100%;
-  height: 40px;
-  border: none;
-}
-
-.search button {
-  height: 40px;
-  width: 40px;
-  background: rgb(12, 12, 86);
-  border: none;
-  border-radius: 0 5px 5px 0;
-  color: #fff;
-  cursor: pointer;
-}
+  .boton-imprimir{
+    height: 40px;
+    width: 40px;
+    background: rgb(12, 12, 86);
+    border: none;
+    border-radius: 5px 5px 5px 5px;
+    color: #fff;
+    cursor: pointer;
+    margin-left: 8px;
+  }
