--- a/ClubSoft/Areas/Identity/Pages/Account/AccessDenied.cshtml
+++ b/ClubSoft/Areas/Identity/Pages/Account/AccessDenied.cshtml
@@ -1,10 +1,10 @@
 ﻿@page
 @model AccessDeniedModel
 @{
-    ViewData["Title"] = "Access denied";
+    ViewData["Title"] = "Ups! No tienes acceso a esta parte del proyecto";
 }
 
 <header>
-    <h1 class="text-danger">@ViewData["Title"]</h1>
-    <p class="text-danger">You do not have access to this resource.</p>
+    <h1 class="text-danger text-center">@ViewData["Title"]</h1>
+    <p class="text-danger text-center">Para ingresar comunicate tu administrador</p>
 </header>
